src/index.less
@import (once) "components/button/button";
@import (once) "components/header/header";

@black: #231f20;
@white: #fff;
@yellow: #fbb829; // colourlovers heart of gold
@yellow-bright: #fe3;
@green: #a1c820;
@teal: #1693A5;
@red: #fe4365; // colourlovers sugar hearts you
@blue: #4a49eb;
@grey: #999;

@margin-default: 1rem;
@margin-half: @margin-default / 2;

@z-index-high: 1;

@s-only: ~'only screen and (max-width: 767px)';
@m: ~'only screen and (min-width: 768px)';
@l: ~'only screen and (min-width: 1281px)';

* {
	box-sizing: border-box;
}

body,
select,
textarea,
input,
button {
	font-family: "Rubik",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans",sans-serif;
	line-height: 1.4;
	-webkit-text-size-adjust: 100%;
	font-feature-settings: "kern", "liga";
}

body {
	font-size: 100%;

	@media @l {
		font-size: 125%;
	}
}

form {
	display: inline-block;
}

main {
	width: 100%;
	padding: 0 @margin-default;

	@media @l {
		width: 40rem;
		margin: 0 auto;
	}
}

h1, h2, h3 {
	font-weight: 500;
}

h2 {
	font-size: 1.25em;
	margin: 0;
}

p {
	margin: 0 0 @margin-default;

	&:last-child {
		margin-bottom: 0;
	}
}

.done {
	text-decoration: line-through;
	color: #aaa;
}

.flat-list {
	margin: 0;
	padding: 0;
	list-style: none;

	li {
		padding: 0;
		margin-bottom: @margin-half;
	}
}

.inline-list {
	display: flex;
	align-items: center;

	li {
		margin-left: @margin-default;
		margin-bottom: 0;

		&:first-child {
			margin-left: 0;
		}
	}
}

a {
	color: @blue;
}

form {
	width: 100%;
}

textarea {
	margin-bottom: @margin-half;
	border: none;
	width: 100%;
	background: @white;
	padding: 0.75rem 1rem;
	font-size: 1.25em;
	resize: none;
	outline: 2px solid #ddd;
	height: 10rem;

	&.flexi {
		height: 3.75rem;
		transition: all 200ms cubic-bezier(0.41, 0.19, 0.02, 0.99);
	}

	&.flexi:focus {
		height: 20vh;
	}

	@media @m {
		&.flexi:focus {
			height: 50vh;
		}
	}

	&:focus {
		outline: 2px solid @black;
	}
}

.tasks {
	margin-bottom: @margin-default;
}

.task {
	margin-left: 1.75rem;

	input[type=checkbox]~label {
		margin-left: 0;
	}

	input[type=checkbox]~label:before {
		margin-left: -1.75rem;
	}

	label {
		word-break: break-word;
	}
}

.task__detail-link {
	font-size: 0.75em;
	text-decoration: none;
	text-align: center;
	padding: 0.25rem 0.5rem;
	border-radius: 0.25rem;
	color: rgba(0, 0, 0, 0.4375);
	vertical-align: 0.125rem;
	background-color: rgba(0, 0, 0, 0.0625);
	text-decoration: none;

	&:hover {
		background: @black;
		color: @white;
	}

	// &:focus {
		// outline: 2px dotted @black;
	// }
}

.task__content {
	padding: @margin-default 0;
}

.task__title {
	font-weight: 500;
	font-size: 2em;
}

.task--is-incomplete label span {
	background-color: rgba(255, 240, 48, 0.125);
	text-decoration: underline;
	text-decoration-style: dotted;
	text-decoration-color: @black;
}

.task--is-done {
	text-decoration: line-through;
	color: #999;

	label {
		background-color: transparent;

		&:before {
			visibility: hidden; // misschien mooier om uitgegrijsd checkboxje te tonen
		}
	}
}

.task--is-starred {
	font-size: 1.25em;

	&:before {
		content: "";
		display: block;
		position: absolute;
		margin-left: -2.6875rem;
		margin-top: 0.125rem;
		width: 1.5em;
		height: 1em;
		background: @yellow-bright;
		border-radius: 0.25em;
		transform: rotate(-25deg);
	}

	input[type=checkbox]~label:before {
		margin-left: -1.9375rem;
	}

	input[type=checkbox]:checked~label:before {
		background: @black;
		box-shadow: inset 0 0 0 0.125em @yellow-bright;
	}

	// meh!!
	.task--is-done& {
		&:before {
			background-color: #ddd;
		}
	}
}

input[type=checkbox] {
	position: absolute;
	opacity: 0;
}

input[type=checkbox]~label {
	cursor: pointer;
	margin-left: 1.75rem;
}

input[type=checkbox]~label:before {
	display: block;
	content: "";
	width: 0.675em;
	height: 0.675em;
	position: absolute;
	margin-top: 0.25em;
	border-radius: 0.125em;
	border: 0.125em solid @black;
}

input[type=checkbox]:focus~label:before {
	box-shadow: 0 0 0 0.25em rgba(0, 0, 0, 0.15);
}

input[type=checkbox]:checked~label:before {
	background-color: @black;
	box-shadow: inset 0 0 0 0.125em @white;
	// background: linear-gradient(-45deg, transparent 0%, transparent 40%, @black 40%,  55%, transparent 55%, transparent 100%);
	// border-color: #999;
}

input[type=checkbox]:checked~label {
	// text-decoration: line-through;
	// color: #999;
	background-color: @yellow-bright;
}

input[type=checkbox]:disabled~label:before {
	border-color: #999;
}

input[type=checkbox]:checked:disabled~label {
	// text-decoration: line-through;
	// color: #999;
	background-color: transparent;
}

input[type=checkbox]:checked:disabled~label:before {
	background-color: #999;
}
input[type=checkbox]:disabled~label {
	color: #999;
}


.light-on-dark {
	-webkit-font-smoothing: antialiased;
}

main {
	padding-bottom: 10rem;
}

.add-item {
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100%;
	background: @white;
	padding: @margin-default;
}

.panel {
	background: #eee;
	padding: @margin-default;
	margin-bottom: @margin-default;
	margin-left: -@margin-default;
	margin-right: -@margin-default;
}


.m-and-up {
	@media @s-only {
		display: none;
	}
}

.buttons {
	margin-top: @margin-default;

	form {
		width: 100%;
		margin-bottom: @margin-default;
	}

	@media @m {
		display: flex;
		align-items: flex-start;

		form {
			width: auto;
		}
	}
}

hr {
	border: none;
	border-top: 2px solid @black;
}

.tnum {
	font-feature-settings: "kern", "liga", "tnum";
}

.tasklist--review {
	@media @m {
		font-size: 1.5em;
	}

	& > li {
		padding-top: 30vh;
		display: block;
		margin: 0 auto;
		height: 100vh;

		@media @m {
			width: 60rem;
		}
	}
}

.fullscreen {
	height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;

	button {
		font-size: 2em;
	}
}

